# go-backend/internal/api/routers/StatRouter.go
@@ -1,0 +1,11 @@
+package router
+
+import (
+	"app/internal/api/contorllers"
+	"github.com/gin-gonic/gin"
+)
+
+func (router *Router) StatRouters(group *gin.RouterGroup) {
+	group.GET("/get_user_stats/:key", controller.GetUserStat)
+	group.PUT("/update_user_stats", controller.UpdateUserStat)
+}
